--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,54 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+html {
+  scroll-behavior: smooth;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --color-background-primary: #041221;
+  --color-background-secondary: #0c2e52;
+  --color-lightblue: #60a5fa; /*Tailwind blue-400 */
+
+  --color-darkblue: #1e40af; /* Tailwind blue-800 */
+  --color-lightgray: #9ca3af; /* Tailwind gray-400 */
+  --color-gray: #111827; /* Tailwind gray-800 */
+  --color-lightgray-opacity-1: rgba(
+    156,
+    163,
+    175,
+    0.1
+  ); /* Tailwind gray-400 with opacity 0.2 */
+  --color-lightgray-opacity-2: rgba(
+    156,
+    163,
+    175,
+    0.2
+  ); /* Tailwind gray-400 with opacity 0.2 */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    background-color: var(--color-background-primary);
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+input {
+  margin-top: 0.4rem;
+  margin-bottom: 0.6rem;
+  padding: 0.8rem;
+  background-color: var(--color-lightgray-opacity-2);
+  border-radius: 0.3rem;
+  outline: none;
+}
+
+textarea {
+  margin-top: 0.4rem;
+  padding: 0.8rem;
+  background-color: var(--color-lightgray-opacity-2);
+  border-radius: 0.3rem;
+  font-weight: 600;
+  outline: none;
 }
